--- a/package.json
+++ b/package.json
@@ -4,16 +4,15 @@
   "description": "this is a project",
   "main": "app.js",
   "dependencies": {
+    "body-parser": "^1.17.2",
     "cors": "^2.8.3",
     "express": "^4.15.3",
-    "mysql": "^2.13.0",
-    "sequelize": "^3.0.0",
-    "vue": "^2.3.4"
+    "sequelize": "^3.0.0"
   },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start" :"node app.js"
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
