--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "body-parser": "^1.17.2",
     "cors": "^2.8.3",
     "express": "^4.15.3",
+    "express-fileupload": "^0.1.3",
+    "mysql": "^2.13.0",
+    "redis": "^2.7.1",
     "sequelize": "^3.0.0"
   },
   "devDependencies": {},
