--- a/chat/package.json
+++ b/chat/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "element-ui": "^1.3.7",
     "moment": "^2.18.1",
     "superagent": "^3.5.2",
     "vue": "^2.3.3",
